# StudyNotes

./: .gitignore  C++.md  CMakeLists.txt  ChatGPT-Web.json  Factory Interface 20220803.pptx  Linux.md  QT.md  QtInstall.sh  UT_OfflineAnalyzer.km  coderead.md  dekang-chang.md  docker笔记.md  gcovr笔记.md  git笔记.md  markdown.md  论文写作结构.md  资料网站.md
WebServer-master/code/: main.cpp
cmake-cook/: CMakeLists.txt  Messageout_shared.cpp  Messageout_shared.h  Messageout_static.cpp  Messageout_static.h  Readme.md  build.sh  hello.cpp
interview/: huawei.md  interview.md  introduce.md
linux/: Readme.md
linux/QQ/: user1.cpp  user2.cpp
linux/a_s_forks/: app  app.cpp  s  socket  socket.cpp
linux/a_s_thread/: app.cpp  socket.cpp
linux/api/: access.cpp  chmod.cpp  chown.cpp  creat.cpp  dir.cpp  dup.cpp  fcntl.cpp  ls-l.cpp  lseek.cpp  lstat.cpp  mkdir.cpp  mmap  mmap.cpp  open.cpp  read.cpp  test.cpp  truncate.cpp  wait.cpp
linux/app_server/: app.cpp  socket.cpp
linux/app_server_fork/: app.cpp  socket.cpp
linux/app_server_thread/: app  app.cpp  socket  socket.cpp
linux/epoll/: app.cpp  server.cpp
linux/poll/: app.cpp  server.cpp
linux/select/: app.cpp  server.cpp
linux/sign/: alarm  alarm.cpp  chld  core.cpp  kill.cpp  setitimer.cpp  sigaction.cpp  sigchld.cpp  signal.cpp  sigprocmask.cpp  test  timer
linux/sock_loca/: r  recv.cpp  s  send.cpp
linux/socket/: ip  ipcov.cpp  socket  socket.cpp
linux/thread/: detach  exit  join  procus  procus.cpp  pthread  pthread_creat.cpp  pthread_detach.cpp  pthread_exit.cpp  pthread_join.cpp  sell  sellticket.cpp  sem  semaphore.cpp  线程同步互斥锁.txt
linux/共享内存/: 函数.txt
linux/内存映射/: A.cpp  B.cpp  a  b
linux/守护进程/: time  time.cpp
linux/管道/: mkfifo.cpp  pic.cpp  pipe.cpp  read.cpp  write.cpp
python/: Powershell.md  Readme.md  day.py  weather_query.py
